<resources>
    <string name="error">Answer incorrect  ;(</string>
    <string name="tura_zaliczona">" turn completed."</string>
    <string name="graj">Play</string>
    <string name="castom">Custom</string>
    <string name="exit">EXIT</string>
    <string name="lewel_zaliczony">Level Passed</string>
    <string name="ok" translatable="false">OK</string>
    <string name="l1" translatable="false">Level 1</string>
    <string name="l2" translatable="false">Level 2</string>
    <string name="l3" translatable="false">Level 3</string>
    <string name="l4" translatable="false">Level 4</string>
    <string name="l5" translatable="false">Level 5</string>
    <string name="l6" translatable="false">Level 6</string>
    <string name="l7" translatable="false">Level 7</string>
    <string name="l8" translatable="false">Level 8</string>
    <string name="l9" translatable="false">Level 9</string>
    <string name="l10" translatable="false">Level 10</string>
    <string name="l11" translatable="false">Level 11</string>
    <string name="l12" translatable="false">Level 12</string>
    <string name="l13" translatable="false">Level 13</string>
    <string name="l14" translatable="false">Level 14</string>
    <string name="l15" translatable="false">Level 15</string>
    <string name="l16" translatable="false">Level 16</string>
    <string name="l17" translatable="false">Level 17</string>
    <string name="l18" translatable="false">Level 18</string>
    <string name="wybie_level">Select Level</string>
    <string name="aby_odblokowa_ten_lewel_odblokuj_poprzedni">To unlock this level, unlock the previous one :)</string>
    <string name="wybierz_kolor_zakrytego_pola">Select the color of the hidden field</string>
    <string name="kolr_czerwony">Red colour</string>
    <string name="kolor_zielony">green color</string>
    <string name="kolor_zu_ty">yellow color</string>
    <string name="kolor_niebieski">blue color</string>
    <string name="kolor_pomaranczowy">Orange color</string>
    <string name="kolor_ruzowy">pink color</string>
    <string name="app_name">Piggy memory game.</string>
    <string name="gratulacje">"Congratulations!!!          "</string>
    <string name="how_to_play">\?</string>
    <string name="do_zaliczenia_lew">Points to pass the level</string>
    <string name="pomoc1">Click to reveal the cards.</string>
    <string name="pomoc2">Remember the number of individual colors. Click when you\'re ready.</string>
    <string name="pomoc3">Analyze the picture and indicate the color that is missing. Click when you\'re ready.</string>
    <string name="pomoc4">Indicate the missing color.</string>
    <string name="czy_napewno_chcesz_wyj">Are you sure you want to leave?</string>
    <string name="tak">Yes</string>
    <string name="nie">no</string>
    <string name="achievements">Achievements</string>
    <string name="sing_in">Sing in</string>
    <string name="in_order_to_use_the_achievement_function_log_in_with_your_google_account">In order to use the achievement function, log in with your Google account.</string>

</resources>
