<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l3"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l4"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l5"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l6"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l7"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l8"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l9"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l10"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l11"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l12"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l13"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l14"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l15"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l16"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l17"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buton"
        android:drawableEnd="@drawable/nic"
        android:text="@string/l18"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

</LinearLayout>